[package]
name = "test-blog-os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

#[profile.dev]
#panic = "abort"

#[profile.release]
#panic = "abort"

#[unstable]
#build-std = ["core", "compiler_builtins"]

#[target.x86_64-unknown-none]
#llvm-target = "x86_64-unknown-none"
#data-layout = "e-m:e-i64:64-f80:128-n8:16:32:64-S128"
#arch = "x86_64"
#target-endian = "little"
#target-pointer-width = "64"
#target-c-int-width = "32"
#os = "none"
#executables = true
#linker-flavor = "ld.lld"
#linker = "rust-lld"
#panic-strategy = "abort"
#disable-redzone = true
#features = "-mmx,-sse,+soft-float"
